# ai-labs

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  dev.sh  docker-compose.yml  manage-k8s.sh  manage.sh  nginx.conf  package.json  requirements.txt
scripts/: Makefile  README.md  _pipeline_common.py  _pipeline_common_backup.py  _version_check.py  ai-cli-utils.py  ai-command-builder.py  audit-documentation.py  backup.sh  build-multiarch.sh  check-directory-freshness.py  check-directory-freshness.sh  check-env.py  conftest.py  create-daily-jobs.py  create-daily-tasks.py  create-daily-tasks.sh  create-jobs.py  create-weekly-jobs.py  create-weekly-tasks.py  create-weekly-tasks.sh  dispatch-agent-wrapper.py  encode-to-b64.py  epoch-to-jst.py  epoch-to-jst.sh  extract-gws-doc-text.py  extract-gws-sheets-header.py  extract-gws-slides-text.py  extract-repo-analysis-data.py  fetch-rss-feeds.py  fetch-slack-users.py  filter-contact-history-csv.py  filter-customer-csv.py  filter-gws-drive-metadata.py  find-job.py  find-task.py  find-task.sh  free-notion-mcp-port.py  generate-negotiation-records-sql.py  get-jst-date.py  (+40 more)
scripts/ai/: ai-cli-utils.py  invoke-agent.py  resolve-shared-ai-rules.py  sync-claude-agents.py
scripts/data/: extract-repo-analysis-data.py  filter-contact-history-csv.py  mask-private-csv.py
scripts/git-hooks/: pre-commit
scripts/gws/: extract-gws-doc-text.py  extract-gws-sheets-header.py  extract-gws-slides-text.py  filter-gws-drive-metadata.py  merge-gws-intermediate-files.py  summarize-filtered-metadata.py
scripts/jobs/: create-daily-jobs.py  (+7 more)
(+493 files in other folders)
